<resources>
    <string name="app_name">白开水笔记</string>
    <string name="title_activity_main">白开水笔记</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">笔记设置</string>
    <string name="str_note_detail_right">str_note_detail_right</string>
    <string name="str_note_tb_detail_right">保存</string>
    <string name="action_share">分享</string>
    <string name="action_add">卡片风格</string>
    <string name="action_save">保存</string>
    <string name="action_image">图片</string>
    <string name="action_delete">删除</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="noteTitleStr">标题</string>
    <string name="note_hint_item">请输入内容</string>
    <string name="note_image_tag">NOTE_IMAGE_TAG</string>
    <string name="note_text_tag">NOTE_TEXT_TAG</string>
    <string name="app_address">https://github.com/mhgd3250905/DaKaiNote</string>
    <string name="app_desc">记录生活，记录简单</string>
    <string name="note_voice_tag">note_voice_tag</string>
    <string name="item_voice_str">点击播放录音...</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="not_save_anything">您未保存任何内容...</string>
    <string name="note_image_save">保存</string>
    <string name="note_image_delete">删除</string>
    <string name="blank_tip">点击新增笔记</string>
    <string name="dialog_image_from_camera">来自拍照</string>
    <string name="dialog_image_from_album">来自相册</string>
    <string name="notelist_tb_check">全选</string>
    <string name="note_edit_hint">点击输入内容</string>
    <string name="notelist_style">样式</string>
    <string name="notelist_style_linear">列表布局</string>
    <string name="notelist_style_card">瀑布布局</string>
    <string name="title_activity_note_edit_again">NoteEditAgainActivity</string>
    <string name="note_edit_menu">菜单</string>
    <string name="menu_note_edit_image">图片</string>
    <string name="menu_note_edit_voice">录音</string>
    <string name="menu_note_edit_schedule">行事历</string>
    <string name="call_phone">您选择了电话:</string>
    <string name="open_url">您选择了网址:</string>
    <string name="notelist_style_grid">卡片布局</string>
    <string name="setting_title_1">界面</string>
    <string name="setting_night_style">夜间模式，点击切换</string>
    <string name="setting_title_2">数据</string>
    <string name="setting_title_3">隐私</string>
    <string name="splash_title">白开水笔记</string>
    <string name="splash_content">2016.10.09</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting">设置</string>
    <string name="widget_Hint_Str">点击输入笔记内容</string>
    <string name="appwidget_text">Test</string>
    <string name="add_widget">Add widget</string>
    <string name="share">图片分享</string>
    <string name="setting_title_4">功能</string>
    <string name="author">作者</string>
</resources>
