<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/menu_tb_notelist_delete_check"
        android:orderInCategory="80"
        android:title="@string/notelist_style"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@id/menu_tb_notelist_linear"
                android:orderInCategory="80"
                android:icon="@drawable/vector_drawable_list"
                android:title="@string/notelist_style_linear"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@id/menu_tb_notelist_stagger"
                android:icon="@drawable/vector_drawable_stagger"
                android:orderInCategory="80"
                android:title="@string/notelist_style_card"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@id/menu_tb_notelist_grid"
                android:icon="@drawable/vector_drawable_grid"
                android:orderInCategory="80"
                android:title="@string/notelist_style_grid"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

</menu>