<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/menu_note_edit"
        android:orderInCategory="80"
        android:title="@string/note_edit_menu"
        android:icon="@drawable/vector_drawable_enclosure"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@id/menu_note_edit_image"
                android:orderInCategory="80"
                android:title="@string/menu_note_edit_image"
                android:icon="@drawable/item_camera"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@id/menu_note_edit_voice"
                android:orderInCategory="80"
                android:title="@string/menu_note_edit_voice"
                android:icon="@drawable/item_voice"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@id/menu_note_edit_schedule"
                android:orderInCategory="80"
                android:title="@string/menu_note_edit_schedule"
                android:icon="@drawable/item_list"
                app:showAsAction="ifRoom"/>

        </menu>
    </item>

</menu>